--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:text="Start Capture"
         android:width="150dp"
         android:height="90dp"
+        android:textSize="20dp"
         android:id="@+id/startButton"
         android:layout_gravity="right|left"
+        android:onClick="startButtonOnClick"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="57dp"
-        android:onClick="startButtonOnClick" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -28,49 +28,25 @@
         android:id="@+id/stopButton"
         android:width="150dp"
         android:height="90dp"
-        android:layout_alignBottom="@+id/startButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="stopButtonOnClick" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Packet Sniffer"
-        android:id="@+id/titleView"
         android:textSize="20dp"
-        android:layout_alignParentTop="true"
+        android:onClick="stopButtonOnClick"
+        android:layout_below="@+id/startButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textOn="Show Live Traffic"
-        android:textOff="Show Malicious Traffic"
-        android:width="150dp"
-        android:height="60dp"
-        android:id="@+id/toggleButton"
-        android:checked="true"
-        android:layout_below="@+id/stopButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="trafficButtonOnClick" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="COMPLETED"
+        android:width="150dp"
+        android:height="90dp"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/progressView"
-        android:layout_alignBottom="@+id/toggleButton"
+        android:layout_below="@+id/stopButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/toggleButton"
-        android:layout_alignRight="@+id/startButton"
-        android:layout_alignEnd="@+id/startButton" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="match_parent"
@@ -79,12 +55,9 @@
         android:textSize="20dp"
         android:maxLines = "1000"
         android:scrollbars = "vertical"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/toggleButton"
-        android:layout_alignEnd="@+id/toggleButton"
-        android:text="text"
-        android:layout_below="@+id/progressView" />
+        android:background="@android:color/white"
+        android:layout_toRightOf="@+id/startButton"
+        android:layout_toEndOf="@+id/startButton"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
