--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
         android:id="@+id/progressView"
         android:layout_below="@+id/stopButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/trafficView" />
 
     <TextView
         android:layout_width="match_parent"
@@ -72,7 +73,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Time    Source          Protocal         Length      Status"
+        android:text=" Time    Source        Protocal        Length      Status"
         android:id="@+id/titleView"
         android:layout_alignParentTop="true"
         android:textSize="20dp"
@@ -80,6 +81,18 @@
         android:layout_toRightOf="@+id/startButton"
         android:layout_alignRight="@+id/trafficView"
         android:layout_alignEnd="@+id/trafficView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/librarySizeView"
+        android:layout_alignBottom="@+id/progressView"
+        android:textSize="10dp"
+        android:gravity="center"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/trafficView"
+        android:layout_toStartOf="@+id/trafficView" />
 
 
 </RelativeLayout>
